# llm_eval_monitoring

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: eval_ci.yml  rag_souverain_integration.yml
ci/: quality_gate.py
dashboard/grafana/dashboards/: rag_quality.json
dashboard/grafana/provisioning/dashboards/: dashboard_provider.yml
dashboard/grafana/provisioning/datasources/: eval_postgres.yml
eval/: config.py  judge_client.py  judge_cost.py  metrics.py  rag_client.py  runner.py
eval/testset/: cuad_adapter.py  generator.py
scripts/: capture_baseline.py  export_audit_report.py  generate_testset.py  run_eval.py
store/: db.py  models.py  writer.py
store/migrations/: env.py
store/migrations/versions/: 0001_initial_schema.py
