[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-eval-monitoring"
version = "0.1.0"
description = "LLM evaluation and monitoring framework for sovereign RAG systems"
requires-python = ">=3.11"
dependencies = [
    "ragas>=0.1.14",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "datasets>=2.19.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
eval-generate-testset = "scripts.generate_testset:app"
eval-run = "scripts.run_eval:app"
eval-baseline = "scripts.capture_baseline:app"
eval-audit = "scripts.export_audit_report:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval*", "store*", "ci*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
